--- a/ChatBots_NICU_JSON_SUMMARY/ChatBot_Summarizer_Notebook.ipynb
+++ b/ChatBots_NICU_JSON_SUMMARY/ChatBot_Summarizer_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Your little one is being closely monitored in the NICU, and I'm here to update you on their status. Their vital signs, like heart rate and oxygen saturation, have been stable overall. The team has been adjusting feeding amounts and making sure they're comfortable. There have been moments where their skin tone has varied, sometimes appearing blueish or jaundiced, which is common in premature babies. We've also been managing their pain levels, which occasionally have been moderate to high, with appropriate interventions.\\n\\nWe've been keeping an eye on their temperature, and it's been within a normal range. The medical team has been proactive with interventions like lighting adjustments, position changes, and administering medication when necessary. Please let me know if you have any specific questions or if there's anything else you'd like to know.\""
+       "\"Your little one is doing okay in the NICU. The recent updates show that their vital signs, like heart rate and oxygen levels, are within a stable range. They've been receiving formula feedings, and the medical team is keeping an eye on their skin tone and pain levels, which have varied a bit. Interventions like medication and lighting adjustments have been made to keep them comfortable. The team is closely monitoring everything to ensure your child is getting the best care. If you have any specific questions or concerns, feel free to ask!\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Your little one is doing okay with the interventions we're providing in the NICU. We've had to make some adjustments like increasing and then decreasing the oxygen flow to help with breathing. There have been some moments of discomfort, but we are managing those with pain relief measures. The color changes in his skin tone, like the bluish tint, are something we're keeping a close eye on and addressing as needed. We've also given antibiotics and other medications to support his health. Overall, we're carefully monitoring his vital signs and making necessary adjustments to ensure he's as comfortable and stable as possible. If you have any specific concerns or questions, feel free to ask!\""
+       "'Your child is responding well to the interventions. Adjustments have been made to their oxygen flow, and their skin tone has shown some improvement from jaundice to more normal coloring. Feedings are progressing, with a gradual increase in the amount of formula. Pain levels have varied, but the team has been attentive, using diaper changes, position adjustments, and medication to help manage any discomfort. Overall, the interventions are helping to keep your child stable and comfortable. If you have any more questions, just let me know!'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'You asked about how your premature child is doing in the NICU.'"
+       "'You asked about how your child is doing with the interventions in the NICU.'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,16 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I'm sorry, but I can't access personal information like your baby's name. If you have any questions about your baby's condition or care, feel free to ask!\""
+       "\"I'm sorry, I don't have access to your baby's name. If you let me know, I can personalize the updates for you.\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The data shows a time range from October 8, 2024, to October 9, 2024.'"
+       "'The context I have covers updates from October 8th, 2024. If you need information from a different time frame, please let me know!'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,6 @@
     "    rag_chain = create_retrieval_chain(retriever, question_answer_chain)\n",
     "    \n",
     "    response = rag_chain.invoke({\"input\": promptQuestion})\n",
-    "\n",
     "    return response['answer']\n",
     "\n",
     "\n",
@@ -351,6 +350,26 @@
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(metadata={'source': 'C:\\\\Users\\\\elfo\\\\Documents\\\\Capstone\\\\ChatBots_NICU_JSON_SUMMARY\\\\Adolf_Data.json', 'seq_num': 1, 'start_index': 0}, page_content='{\"patient_id\": \"Adolf\", \"data\": [{\"timestamp\": \"2024-11-07 20:38:37\", \"vital_signs\": {\"heart_rate\": 124, \"respiratory_rate\": 64, \"body_temperature\": 37.3}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:43:37\", \"vital_signs\": {\"heart_rate\": 138, \"respiratory_rate\": 75, \"body_temperature\": 37.1}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:48:37\", \"vital_signs\": {\"heart_rate\": 134, \"respiratory_rate\": 62, \"body_temperature\": 36.7}, \"intervention\": {\"type\": \"feeding\", \"detail\": \"30 ml formula\"}, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:53:37\", \"vital_signs\": {\"heart_rate\": 128, \"respiratory_rate\": 68, \"body_temperature\": 37.3}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:58:37\", \"vital_signs\": {\"heart_rate\": 102, \"respiratory_rate\": 94, \"body_temperature\": 36.6}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 21:03:37\", \"vital_signs\": {\"heart_rate\": 128,')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parentChatbotSummarize('Adolf_Data.json','how is ADolf')"
    ]
   }
  ],
