--- a/ChatBots_NICU_JSON_SUMMARY/ChatBot_Summarizer_V_1.ipynb
+++ b/ChatBots_NICU_JSON_SUMMARY/ChatBot_Summarizer_V_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Your baby has been experiencing varying levels of comfort. At some times, the pain level indicated is \"Low,\" which suggests they are relatively comfortable. However, there have been moments when the pain level has been \"Moderate\" to \"Extreme.\" Our team is actively managing your baby\\'s comfort through different interventions, such as medication and position changes, to help ensure they are as comfortable as possible. If you have any specific concerns or questions, please feel free to ask.'"
+       "<generator object RunnableBindingBase.stream at 0x00000231A4CC1300>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
