--- a/ChatBots_NICU_JSON_SUMMARY/ChatBot_Summarizer_V_2_testing.ipynb
+++ b/ChatBots_NICU_JSON_SUMMARY/ChatBot_Summarizer_V_2_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,28 +114,27 @@
     "        },  # constructs a key \"abc123\" in `store`.\n",
     "    )\n",
     "\n",
-    "    return response['chat_history'] "
+    "    return response['answer'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[HumanMessage(content='How hasmy child been?'),\n",
-       " AIMessage(content=\"Your child has been stable overall. We've been closely monitoring their vital signs, which have been mostly within normal ranges, though there have been some fluctuations. They have been receiving regular feedings, typically around 15-29 ml of formula, and have had a few interventions like medication and lighting adjustments to ensure their comfort. There have been instances where their skin tone changed to blueish or yellow-jaundice, and we are addressing that with appropriate care. Pain levels have varied, but we're managing them with prescribed medications. If you have any specific concerns or questions, feel free to ask!\")]"
+       "Document(metadata={'source': 'C:\\\\Users\\\\elfo\\\\Documents\\\\Capstone\\\\ChatBots_NICU_JSON_SUMMARY\\\\Adolf_Data.json', 'seq_num': 1, 'start_index': 0}, page_content='{\"patient_id\": \"Adolf\", \"data\": [{\"timestamp\": \"2024-11-07 20:38:37\", \"vital_signs\": {\"heart_rate\": 124, \"respiratory_rate\": 64, \"body_temperature\": 37.3}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:43:37\", \"vital_signs\": {\"heart_rate\": 138, \"respiratory_rate\": 75, \"body_temperature\": 37.1}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:48:37\", \"vital_signs\": {\"heart_rate\": 134, \"respiratory_rate\": 62, \"body_temperature\": 36.7}, \"intervention\": {\"type\": \"feeding\", \"detail\": \"30 ml formula\"}, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:53:37\", \"vital_signs\": {\"heart_rate\": 128, \"respiratory_rate\": 68, \"body_temperature\": 37.3}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 20:58:37\", \"vital_signs\": {\"heart_rate\": 102, \"respiratory_rate\": 94, \"body_temperature\": 36.6}, \"intervention\": null, \"pain_level\": \"Low\"}, {\"timestamp\": \"2024-11-07 21:03:37\", \"vital_signs\": {\"heart_rate\": 128,')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parentChatbotSummarize('Gurshan_Data.json','TestTest','How hasmy child been?')"
+    "parentChatbotSummarize('Adolf_Data.json','TestTest','How hasmy child been?')"
    ]
   }
  ],
