--- a/ChatBots_NICU_JSON_SUMMARY/ChatBot_V6_TestingChatHistory.ipynb
+++ b/ChatBots_NICU_JSON_SUMMARY/ChatBot_V6_TestingChatHistory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -11,22 +11,27 @@
        "True"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Imports\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog, messagebox, scrolledtext\n",
     "import os\n",
     "import threading \n",
     "import time\n",
+    "from sqlalchemy import create_engine, Column, Integer, String, Text, ForeignKey\n",
+    "from sqlalchemy.orm import sessionmaker, relationship, declarative_base\n",
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "import atexit\n",
     "\n",
     "# Function to handle chatbot summarization\n",
     "from langchain_community.document_loaders import JSONLoader\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter, RecursiveJsonSplitter\n",
     "from langchain_core.vectorstores import InMemoryVectorStore\n",
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "from langchain_community.chat_message_histories import ChatMessageHistory\n",
@@ -35,25 +40,107 @@
     "from langchain.chains import create_history_aware_retriever, create_retrieval_chain\n",
     "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "load_dotenv()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_session_history(session_id: str):\n",
-    "    if session_id not in store:\n",
-    "        store[session_id] = ChatMessageHistory()\n",
-    "    return store[session_id]\n",
-    "store = {}"
+    "#Chat History Database setup\n",
+    "DATABASE_URL = \"sqlite:///chat_history_testTest.db\"\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "class Session(Base):\n",
+    "    __tablename__ = \"sessions\"\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    session_id = Column(String, unique=True, nullable=False)\n",
+    "    messages = relationship(\"Message\", back_populates=\"session\")\n",
+    "\n",
+    "class Message(Base):\n",
+    "    __tablename__ = \"messages\"\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    session_id = Column(Integer, ForeignKey(\"sessions.id\"), nullable=False)\n",
+    "    role = Column(String, nullable=False)\n",
+    "    content = Column(Text, nullable=False)\n",
+    "    session = relationship(\"Session\", back_populates=\"messages\")\n",
+    "\n",
+    "# Create the database and the tables\n",
+    "engine = create_engine(DATABASE_URL)\n",
+    "Base.metadata.create_all(engine)\n",
+    "SessionLocal = sessionmaker(bind=engine)\n",
+    "\n",
+    "def get_db():\n",
+    "    db = SessionLocal()\n",
+    "    try:\n",
+    "        yield db\n",
+    "    finally:\n",
+    "        db.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to save a single message\n",
+    "def save_message(session_id: str, role: str, content: str):\n",
+    "    with SessionLocal() as db:\n",
+    "        try:\n",
+    "            session = db.query(Session).filter(Session.session_id == session_id).first()\n",
+    "            if not session:\n",
+    "                session = Session(session_id=session_id)\n",
+    "                db.add(session)\n",
+    "                db.commit()\n",
+    "                db.refresh(session)\n",
+    "\n",
+    "            db.add(Message(session_id=session.id, role=role, content=content))\n",
+    "            db.commit()\n",
+    "        except SQLAlchemyError:\n",
+    "            db.rollback()\n",
+    "\n",
+    "\n",
+    "# Function to load chat history\n",
+    "def load_session_history(session_id: str) -> ChatMessageHistory:\n",
+    "    chat_history = ChatMessageHistory()\n",
+    "    with SessionLocal() as db:\n",
+    "        try:\n",
+    "            session = db.query(Session).filter(Session.session_id == session_id).first()\n",
+    "            if session:\n",
+    "                for message in session.messages:\n",
+    "                    chat_history.add_message({\"role\": message.role, \"content\": message.content})\n",
+    "        except SQLAlchemyError:\n",
+    "            pass\n",
+    "\n",
+    "    return chat_history\n",
+    "\n",
+    "\n",
+    "# Modify the get_session_history function to use the database\n",
+    "def get_session_history(session_id: str) -> ChatMessageHistory:\n",
+    "    if session_id not in store:\n",
+    "        # Load from the database if not in store\n",
+    "        store[session_id] = load_session_history(session_id)\n",
+    "    return store[session_id]\n",
+    "\n",
+    "\n",
+    "# Ensure you save the chat history to the database when needed\n",
+    "def save_all_sessions():\n",
+    "    for session_id, chat_history in store.items():\n",
+    "        for message in chat_history.messages:\n",
+    "            save_message(session_id, message[\"role\"], message[\"content\"])\n",
+    "\n",
+    "# Register function to save sessions before exit\n",
+    "atexit.register(save_all_sessions)\n",
+    "\n",
+    "store = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +150,7 @@
     "\n",
     "        loader = JSONLoader(file_path=filepath, jq_schema='.', text_content=False)\n",
     "        docs = loader.load()\n",
-    "        text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200, add_start_index=True)\n",
+    "        text_splitter = RecursiveCharacterTextSplitter(chunk_size=10000, chunk_overlap=200, add_start_index=True)  # Increased chunk-size to 10000 from 1000\n",
     "        splits = text_splitter.split_documents(docs)\n",
     "        vectorstore = InMemoryVectorStore.from_documents(documents=splits, embedding=OpenAIEmbeddings())\n",
     "        retriever = vectorstore.as_retriever(search_type='similarity')\n",
@@ -86,10 +173,11 @@
     "\n",
     "        history_aware_retriever = create_history_aware_retriever(llm, retriever, contextualize_q_prompt)\n",
     "        system_prompt = (\n",
-    "            \"You are a nurse updating a parent on the status of their child in the NICU.\"\n",
-    "            \"Use the following retrieved context to provide relevant information to the parent. \"\n",
-    "            \"Speak in a conversational tone, and keep the summary concise.\"\n",
+    "            \"You are a nurse updating a parent on the status of their child in the NICU. \"\n",
+    "            \"Use the retrieved context to provide relevant information to the parent. \"\n",
+    "            \"Speak in a conversational tone, and keep the summary concise. \"\n",
     "            \"Do not diagnose.\"\n",
+    "            \"You always have access to the chat history IF NEEDED\" #was needed to remember\n",
     "            \"\\n\\n{context}\"\n",
     "        )\n",
     "\n",
@@ -115,17 +203,20 @@
     "            config={\n",
     "                \"configurable\": {\"session_id\": session_id}\n",
     "            },  # constructs a key \"abc123\" in `store`.\n",
-    "            \n",
     "        )\n",
+    "\n",
+    "        # Save the user question and AI response to the database\n",
+    "        save_message(session_id, \"human\", promptQuestion)\n",
+    "        save_message(session_id, \"ai\", response['answer'])\n",
     "\n",
     "        return response['answer']\n",
     "    except Exception as e:\n",
-    "        return f\"Error: {str(e)}\""
+    "        return f\"Error: {str(e)}\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +230,12 @@
     "        chat_history_text.insert(tk.END, dots)\n",
     "        chat_history_text.configure(state='disabled')\n",
     "        root.update_idletasks()\n",
-    "        time.sleep(0.5)"
+    "        time.sleep(0.5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,12 +275,12 @@
     "        chat_history_text.configure(state='disabled')\n",
     "        prompt_entry.delete(0, tk.END)\n",
     "\n",
-    "    threading.Thread(target=generate_response).start()"
+    "    threading.Thread(target=generate_response).start()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,12 +291,12 @@
     "    session_entry.delete(0, tk.END)\n",
     "    prompt_entry.delete(0, tk.END)\n",
     "    file_entry.delete(0, tk.END)\n",
-    "    root.after(1000, root.destroy)  # Close the GUI after 1 second"
+    "    root.after(1000, root.destroy)  # Close the GUI after 1 second\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,17 +335,10 @@
     "\n",
     "# End Chat Button\n",
     "end_button = tk.Button(root, text=\"End Chat\", command=end_chat)\n",
-    "end_button.pack(pady=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "end_button.pack(pady=5)\n",
+    "\n",
     "# Mainloop to run the GUI\n",
-    "root.mainloop()"
+    "root.mainloop()\n"
    ]
   }
  ],
