--- a/ChatBots_NICU_JSON_SUMMARY/ChatBot_V5_TEsting.ipynb
+++ b/ChatBots_NICU_JSON_SUMMARY/ChatBot_V5_TEsting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,7 @@
     "# Function to handle chatbot summarization\n",
     "from langchain_community.document_loaders import JSONLoader\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter, RecursiveJsonSplitter\n",
     "from langchain_core.vectorstores import InMemoryVectorStore\n",
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
     "from langchain_community.chat_message_histories import ChatMessageHistory\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "\n",
     "        loader = JSONLoader(file_path=filepath, jq_schema='.', text_content=False)\n",
     "        docs = loader.load()\n",
-    "        text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200, add_start_index=True)\n",
+    "        text_splitter = RecursiveCharacterTextSplitter(chunk_size=10000, chunk_overlap=200, add_start_index=True) #Increaed chunk-size to 10000 from 1000\n",
     "        splits = text_splitter.split_documents(docs)\n",
     "        vectorstore = InMemoryVectorStore.from_documents(documents=splits, embedding=OpenAIEmbeddings())\n",
     "        retriever = vectorstore.as_retriever(search_type='similarity')\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
